# anthrm

./: Ant_HRM32.exe - Shortcut.lnk  HRM  Helen_workout_12-10-27_17-05-30.csv  Helen_workout_13-01-02_16-42-49.csv  ant_HRM.vpj  ant_HRM.vpw  ant_HRM.vpwhist  ant_HRM.vtg  anthrm.c  anthrm_weird.c  build32.bat  build64.bat  clean.bat  clean32.bat  clean64.bat  console.c  console.h  garminhr.c  garminhr.h  gccpath.bat  helen.ini  hrm32.res  hrm64.res  libantplus.c  libantplus.h  mylcdsetup.h
libmylcd-0.80.0-src/: CLEAN.BAT  COPYING.LIB  Makefile.am  changelog.txt  compiling.txt  configure.ac  gccpath.bat  readme.txt
libmylcd-0.80.0-src/examples/: BUILDALL.bat  CLEAN.BAT  Makefile  alpha.c  alphatest.c  atitray.c  ball.c  bandwidth.c  bdfdump.c  bdfglyph.c  bdftest.c  bench.c  calendar.c  config.cfg  contrast.c  cube.c  demos.h  edgefill.c  enumdrv.c  enumfonts.c  enumlang.c  f2.h  file.c  filerender.c  filter.c  fire.c  flame.c  floatingpoint.c  floodfill1.c  floodfill2.c  frame2h.c  fraps.c  gimpbitmap.c  glfwparticles.c  glyphframes.c  glyphs.c  gprof.bat  hello.c  imagetest.c  irc.cfg  (+38 more)
libmylcd-0.80.0-src/examples/AAInfo/: Makefile  aainfo.c  aainfo.h  aaserverlist.txt  build.bat  lock.c  lock.h  net.c  net.h  readme.txt  touch.c  touch.h
libmylcd-0.80.0-src/examples/IRC/: CLEAN.BAT  Makefile  bot.c  bot.h  config.c  config.cfg  config.h  g15.c  g15.h  irc.c  irc.h  lock.c  lock.h  net.c  net.h  network.c  network.h  numerics.h  readme.txt  send.c  send.h
libmylcd-0.80.0-src/examples/LCDMisc/: build.bat  clean.bat  plugin.h  usbd480.c
libmylcd-0.80.0-src/examples/VLC/: CLEAN.BAT  Makefile  browser.c  browser.h  build.bat  button.c  button.h  cfg.c  cfg.h  chapter.c  chapter.h  clock.c  clock.h  cmdparser.c  cmdparser.h  common.c  common.h  drawvolume.c  drawvolume.h  dshowconfig.h  editbox.c  editbox.h  exit.c  exit.h  fileal.c  fileal.h  imagec.c  imagec.h  imgovr.c  imgovr.h  lorenz.c  lorenz.h  m3u.c  m3u.h  meta.c  meta.h  morph.c  morph.h  mylcdsetup.h  particles.c  (+40 more)
libmylcd-0.80.0-src/examples/clock/: CLEAN.BAT  Makefile  client.h  clock.c  net.h  utf8.c
libmylcd-0.80.0-src/examples/configs/: 1bitmono.cfg  3510i.cfg  d_config.cfg  g15.cfg  m_config.cfg  multiple_ddraw.cfg  sed133x.cfg  virtual.cfg
libmylcd-0.80.0-src/examples/demos/: Buildall.bat  Clean.bat  config.cfg
libmylcd-0.80.0-src/examples/filerendering/: 2022-jp  2ch-sjis  GB18030.txt  big5tbl  boxdrawing.txt  charreftbl.txt  chessboard.txt  chineserad.txt  euc-cn  euc-jp_skf.txt  euc-kr.txt  euc-tw  faye-wong_big5.txt  gb2312tbl  gb2312tbl-utf16  gbk_big5.txt  hz-gb2312  iso-2022-jp.txt  iso-2022.txt  iso2022-kr  ja-repertoire2.txt  japanese.txt  jisx0213  kanji_codes_sjis.txt  ko-repertoire.txt  korean.txt  mencuis.uni  sjis.txt  suzuri.txt  test.txt  thaiutf8.txt  tis620.txt  utf8decoder.txt  utf8demo.txt  vlcm.txt  windows-1251.txt
libmylcd-0.80.0-src/examples/images/: 16bpp_somuchwin.tga  24bpp_somuchwin.tga  32bpp_alpha.tga  8bpp_somuchwin.tga  RGB_12bits_palette.tga  RGB_24bits_palette.tga  child.h  girl.h  hk1.tga  hk2.tga  mail.tga  msn1.tga  msn2.tga  startframe.h
libmylcd-0.80.0-src/examples/models/: ball.h  cube.h  duck.h  face.h  hammer.h  kitchenchair.h  light.h  model.h  mother1.h  mother2.h  ncc1701d.h  num3.h  plan.h  skull.h  tricrtps.h  x29.h
libmylcd-0.80.0-src/examples/opengl/: demos.h  file.c  mylcdgl.c  mylcdgl.h
libmylcd-0.80.0-src/examples/rss/: rss.c  rss.h
libmylcd-0.80.0-src/extras/: clean.bat  copylib.bat  copystatic.bat  libmylcd.cbp  libmylcd.depend  libmylcd.layout  make-mylcd_lib.bat
libmylcd-0.80.0-src/extras/buildsystem/: make.pl
libmylcd-0.80.0-src/extras/tools/: Makefile  enc2map.c  hex2bdf.c  plane+01.hex  plane+0D.hex
libmylcd-0.80.0-src/include/: mylcd.h  mylcdconfig.h  mylcdtypes.h
libmylcd-0.80.0-src/libs-extra/: 302_x86_lglcd.lib
libmylcd-0.80.0-src/mappings/: 8859-1  8859-10  8859-11  8859-13  8859-14  8859-16  8859-2  8859-3  8859-4  8859-5  8859-6  8859-7  8859-8  8859-9  cp1250  cp1251  cp1252  cp1253  cp1254  cp1255  cp1257  cp1258  cp437  cp737  cp775  cp850  cp852  cp855  cp857  cp860  cp861  cp862  cp863  cp864  cp865  cp866  cp869  cp874  cp936  cp949  (+10 more)
libmylcd-0.80.0-src/src/: CLEAN.BAT  Makefile.am  Makefile.in  api.c  api.h  apilock.c  apilock.h  bdf.c  bdf.h  big5.h  bmp.c  bmp.h  build.bat  chardecode.c  chardecode.h  cmap.c  cmap.h  combmarks.h  convert.c  convert.h  copy.c  copy.h  device.c  device.h  display.c  display.h  draw.c  draw.h  fileio.c  fileio.h  fonts.c  fonts.h  frame.c  frame.h  framec.c  framec.h  gb18030.c  gb18030.h  gb2312.c  gb2313.h  (+65 more)
libmylcd-0.80.0-src/src/ddraw/: converter.c  converter.h  dd.c  dd.h  ddrawdisplay.c  ddrawdisplay.h  mmx.h
libmylcd-0.80.0-src/src/dlportio/: dlp.c  dlp.h
libmylcd-0.80.0-src/src/ft245/: CLEAN.BAT  FTD2XX.H  ft245.c  ft245.h
libmylcd-0.80.0-src/src/ftdi/: ftdi.c  ftdi.h
libmylcd-0.80.0-src/src/g15/: g15.h  g15display.c  g15display.h
libmylcd-0.80.0-src/src/g15libusb/: CLEAN.bat  endframe.h  g15_libusb.c  g15_libusb.h
libmylcd-0.80.0-src/src/g19/: CLEAN.BAT  g19display.c  g19display.h
libmylcd-0.80.0-src/src/jpg/: jconfig.h  jmorecfg.h  jpg.c  jpg.h
libmylcd-0.80.0-src/src/ks0108/: ks0108.c  ks0108.h
libmylcd-0.80.0-src/src/ledcard/: ledcard.c  ledcard.h
libmylcd-0.80.0-src/src/linux/: linux.c  linux.h
libmylcd-0.80.0-src/src/null/: nulldisplay.c  nulldisplay.h  nullport.c  nullport.h
libmylcd-0.80.0-src/src/openparport/: openparport.c  openparport.h
libmylcd-0.80.0-src/src/pcd8544/: pcd8544_sio.c  pcd8544_sio.h  pcd8544_spi.c  pcd8544_spi.h
libmylcd-0.80.0-src/src/pcf8814/: CLEAN.BAT  pcf8814_sio.c  pcf8814_sio.h  pcf8814_spi.c  pcf8814_spi.h
libmylcd-0.80.0-src/src/pcf8833/: pcf8833_spi.c  (+1 more)
(+284 files in other folders)
